<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context="com.greenetwork.greenetwork.Activity.LoginActivity"
    android:padding="10dp">

    <EditText
        android:id="@+id/editLogin"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLogin"
        android:inputType="textEmailAddress"
        android:background="@color/Green_60"
        android:padding="3dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editSenha"
        android:layout_below="@id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/txtSenha"
        android:inputType="textPassword"
        android:background="@color/Green_60"
        android:padding="3dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textEsqueceuSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editSenha"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/editSenha"
        android:text="@string/txtEsqueceuSuaSehnha"
        android:textColor="@color/dimGrey"
        android:textSize="20sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/editSenha"
        android:layout_alignRight="@id/editSenha"
        android:layout_marginTop="50dp"
        android:background="@color/Green_60"
        android:onClick="onClickEntrar"
        android:textColor="#fff"
        android:text="@string/txtEntrar" />

    <TextView
        android:id="@+id/txtCadastrarEntrarCom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEntrar"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:onClick="onClickCadastrar"
        android:text="@string/txtCadastrarOuEntra"
        android:textAlignment="center"
        android:textColor="@color/dimGrey"
        android:textSize="22sp" />
</RelativeLayout>
