<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenetwork.greenetwork.CadastroUsuarioActivity"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNomeCompleto"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="3dp"
        android:textColor="@color/dimGrey"
        android:textStyle="italic"
        android:layout_marginTop="120dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:padding="3dp"
        android:inputType="textPersonName"
        android:textColor="@color/dimGrey"
        android:background="@color/transparentGreen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtApelido"
        android:layout_row="2"
        android:layout_column="0"
        android:padding="3dp"
        android:textColor="@color/dimGrey"
        android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:padding="3dp"
        android:inputType="textPersonName"
        android:textColor="@color/dimGrey"
        android:background="@color/transparentGreen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:layout_row="4"
        android:layout_column="0"
        android:padding="3dp"
        android:textColor="@color/dimGrey"
        android:textStyle="italic"/>
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:padding="3dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/dimGrey"
        android:background="@color/transparentGreen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CPF"
        android:layout_row="6"
        android:layout_column="0"
        android:padding="3dp"
        android:textColor="@color/dimGrey"
        android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:textColor="@color/dimGrey"
        android:padding="3dp"
        android:inputType="number"
        android:background="@color/transparentGreen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSenha"
        android:layout_row="8"
        android:layout_column="0"
        android:padding="3dp"
        android:textColor="@color/dimGrey"
        android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:padding="3dp"
        android:inputType="textPassword"
        android:textColor="@color/dimGrey"
        android:background="@color/transparentGreen"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtConfimarSenha"
        android:layout_row="10"
        android:layout_column="0"
        android:padding="3dp"
        android:textColor="@color/dimGrey"
        android:textStyle="italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="11"
        android:layout_column="0"
        android:padding="3dp"
        android:inputType="textPassword"
        android:textColor="@color/dimGrey"
        android:background="@color/transparentGreen"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/Green_60"
        android:text="@string/bntCancelar"
        android:onClick="onClickCancelar"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_marginTop="40dp"
        android:textColor="#fff"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@color/Green_60"
        android:text="@string/bntCadastrar"
        android:onClick="onClickConfirmarCadastro"
        android:layout_column="0"
        android:layout_row="12"
        android:layout_marginTop="40dp"
        android:layout_gravity="right"
        android:textColor="#fff"
        />
</GridLayout>
